delete real S&P payment when insert into the sql payment table.